--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/course
+spring.datasource.url=jdbc:mysql://localhost:3306/userfeedbackdb
 spring.datasource.username=user1
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #hibernate configuration:mysql
-spring.jap.hibernate.ddl-auto=update
+spring.jap.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
